# i.duruohaCSC212

./: README.md  pyproject.toml
test-1/: main.py
week-12/: bar_chart.py  bouncing_ball.py  frame_by_frame.py  histogram.py  line_plot.py  line_plotting.py  pendulum.py  pie_chart.py  scatter_plot.py  spring.py
week-5/: accelerated_animation.py  accelerated_ball_drop.py  color_gradient.py  colors.py  drawing_shapes.py  frame_by_frame.py  horizontal_oscillation.py  linear_motion.py  motion_equation.py  moving_a_circle.py  oscillation_techniques.py  rendering_images.py  rendering_texts.py  rotation.py  scaling.py  tkinter_GUI.py  translation.py
week-7/: controlled_circle_motion.py  rotating_3D_cube.py  wireframe_sphere.py
